feat(security): add security
